<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User_homepg">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="26dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="384dp" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="125dp"
        android:layout_height="102dp"
        android:layout_marginTop="72dp"
        android:contentDescription="TODO"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button11" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="269dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_login"
        android:text="@string/register_as_a_donator"
        android:textColorHint="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/btn_view_donators"
        android:layout_width="269dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/bg_login"
        android:text="@string/view_donators"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_register" />

    <Button
        android:id="@+id/btn_blood_bank"
        android:layout_width="269dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/bg_login"
        android:text="@string/blood_bank"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_view_donators" />

    <Button
        android:id="@+id/btn_hospital"
        android:layout_width="269dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/bg_login"
        android:text="@string/hospitals"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_blood_bank" />

    <Button
        android:id="@+id/view_fund"
        android:layout_width="269dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/bg_login"
        android:text="@string/fund"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_hospital" />

    <Button
        android:id="@+id/btn_upcomingevents"
        android:layout_width="269dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/bg_login"
        android:text="@string/upcoming_events"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_fund" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="216dp"
        android:text="@string/app_name"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button11"
        android:layout_width="206dp"
        android:layout_height="44dp"
        android:text="Home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button12"
        android:layout_width="206dp"
        android:layout_height="44dp"
        android:text="View Profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.989"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>