<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View_h_details">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="28dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="395dp" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="249dp"
        android:layout_height="59dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/search_hos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="107dp"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_login"
        android:tint="@android:color/widget_edittext_dark"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_search_24"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/ve_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="107dp"
        android:text="@string/v_name"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="123dp" />

    <TextView
        android:id="@+id/vei_name"
        android:layout_width="263dp"
        android:layout_height="37dp"
        android:layout_marginTop="104dp"
        android:text="@string/view_hos_name"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintHorizontal_bias="0.427"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <TextView
        android:id="@+id/ve_mob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/v_mob"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toBottomOf="@+id/ve_name" />

    <TextView
        android:id="@+id/ve_district"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/v_district"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ve_mob" />

    <TextView
        android:id="@+id/vei_mob_no"
        android:layout_width="263dp"
        android:layout_height="37dp"
        android:layout_marginTop="8dp"
        android:text="@string/view_mob_no_value"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toBottomOf="@+id/vei_name" />

    <TextView
        android:id="@+id/vei_district"
        android:layout_width="263dp"
        android:layout_height="37dp"
        android:layout_marginTop="8dp"
        android:text="@string/view_district_value"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toBottomOf="@+id/vei_mob_no" />

    <TextView
        android:id="@+id/ve_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:text="@string/v_email"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toBottomOf="@+id/ve_district" />

    <TextView
        android:id="@+id/vei_email"
        android:layout_width="263dp"
        android:layout_height="37dp"
        android:layout_marginTop="8dp"
        android:text="@string/view_email_value"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toBottomOf="@+id/vei_district" />

    <TextView
        android:id="@+id/ve_name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/v_name"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline13"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/ve_email" />

    <TextView
        android:id="@+id/ve_mob2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="16dp"
        android:text="@string/v_mob"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toBottomOf="@+id/ve_name2" />

    <TextView
        android:id="@+id/ve_district2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="18dp"
        android:text="@string/v_district"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ve_mob2" />

    <TextView
        android:id="@+id/ve_email2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/v_email"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ve_district2" />

    <TextView
        android:id="@+id/vei_name2"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="48dp"
        android:text="@string/view_hos_name"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toBottomOf="@+id/vei_email" />

    <TextView
        android:id="@+id/vei_mob_no2"
        android:layout_width="263dp"
        android:layout_height="37dp"
        android:layout_marginTop="8dp"
        android:text="@string/view_mob_no_value"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toBottomOf="@+id/vei_name2" />

    <TextView
        android:id="@+id/vei_district2"
        android:layout_width="270dp"
        android:layout_height="37dp"
        android:layout_marginTop="8dp"
        android:text="@string/view_district_value"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintHorizontal_bias="0.777"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toBottomOf="@+id/vei_mob_no2" />

    <TextView
        android:id="@+id/vei_email2"
        android:layout_width="263dp"
        android:layout_height="37dp"
        android:layout_marginTop="8dp"
        android:text="@string/view_email_value"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toBottomOf="@+id/vei_district2" />

</androidx.constraintlayout.widget.ConstraintLayout>